--- a/index.html
+++ b/index.html
@@ -13,16 +13,27 @@
                 <h1 class="fit">Fitness</h1>
             </div>
             <div class="header-list"> 
-            <li><a href="">Home</a></li>
-            <li><a href="">Service</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">About</a></li>
+            <li><a class="home" href="">Home</a></li>
+            <li><a class="iconbar" href="">Service</a></li>
+            <li><a class="iconbar" href="">Contact</a></li>
+            <li><a class="iconbar" href="">About</a></li>
             </div>
         </nav>
+        <div class="get-body">
+            <h1 class="header-content">Get body in shape & stay healthy
+            </h1>
+            <p class="header-des">
+                A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!
+            </p>
+            <div class="btn">
+                <button class="join">Join Club Now!</button>
+                <button class="download">Download App</button>
+            </div>
+        </div>
     </header>
     <main>
 
-    </main>
+    </main> 
     <footer>
 
     </footer>
