added new changes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a class="iconbar" href="">About</a></li>
             </div>
         </nav>
+        <div class="header-body">
         <div class="get-body">
             <h1 class="header-content">Get body in shape & stay healthy
             </h1>
@@ -30,6 +31,13 @@
                 <button class="download">Download App</button>
             </div>
         </div>
+        <img class="img-1" src="images/images 2.png" alt="">
+        <div class="header-blur">
+            <button class="btn-2"></button>
+            <h3 class="price">350+</h3>
+            <p class="video">Video tutorial</p>
+        </div>
+    </div>
     </header>
     <main>
 
