added new changes

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <h3 class="price">350+</h3>
             <p class="video">Video tutorial</p>
         </div>
+        <div class="header-blur-2">
+            <h3 class="price-2">500+</h3>
+            <p class="free">Free Workout Videos</p>
+        </div>
     </div>
     </header>
     <main>
