added new changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,34 @@
     </div>
     </header>
     <main>
-
+        <div class="main-first-section">
+            <div class="first-section-title">
+                <h1 class="change">Change Your Habits</h1>
+                <p class="believe">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="first-section-card">
+                <div class="img-box">
+                    <img class="main-section-img" src="images/image 3.png" alt="">
+                    <h3 class="weight">Movement</h3>
+                    <p class="fitness">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="img-box">
+                    <img class="main-section-img" src="images/image 2.png" alt="">
+                    <h3 class="weight">Time</h3>
+                    <p class="fitness">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="img-box">
+                    <img class="main-section-img" src="images/image 4.png" alt="">
+                    <h3 class="weight">Practice</h3>
+                    <p class="fitness">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="img-box">
+                    <img class="main-section-img" src="images/image 5.png" alt="">
+                    <h3 class="weight">Weight Loss</h3>
+                    <p class="fitness">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </div>
     </main> 
     <footer>
 
