added new changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         <div class="header-body">
         <div class="get-body">
-            <h1 class="header-content">Get body in shape & stay healthy
+            <h1 class="header-content">Get body in <span class="shape">shape</span> & stay healthy
             </h1>
             <p class="header-des">
                 A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!
@@ -72,6 +72,113 @@
                 </div>
             </div>
         </div>
+        <!-- second-main-section -->
+            <div class="second-section-first-div" >
+                <div class="second-sec-scnd-div">
+                    <h1 class="main-header">Run an Extra  <br>
+                        Mile Easily</h1>
+                    <p class="second-des">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                    <button class="join-now">Join Now</button>
+                </div>
+                <div class="second-section-img">
+                    <img class="second-img" src="images/run.jpg" alt="">
+                </div>
+            </div>
+            <div class="third-section-first-div">
+            <div class="third-section-heading-title">
+                <h1 class="third-heading">Trainings and Exercises</h1>
+                <p class="third-des">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+                <div class="img-section">
+            <div class="img-row">
+                <img class="third-sec-first-background" src="images/exercise1.jpg" alt="">
+                </img>
+                <img class="third-sec-second-background" src="images/exercise2.png" alt="">
+                </img>
+                <img class="third-sec-third-background" src="images/exercise3.png" alt="">
+                </img>
+            </div>
+            <div class="img-row">
+                <img class="third-sec-fourth-background" src="images/exercise4.png" alt="">
+                </img>
+                <img class="third-sec-fifth-background" src="images/exercise5.jpg" alt="">
+                </img>
+                <img class="third-sec-sixth-background" src="images/exercise6.jpg" alt="">
+                </img>
+            </div>
+        </div> 
+            </div>
+            <!-- BMI Calculator -->
+             <div class="third-section-heading-title">
+                <h1 class="third-heading">BMI Calculator</h1>
+                <p class="third-des">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+             </div>
+             <section>
+                <div class="BMI-section-flex">
+                    <div class="calculator">
+                        <h1 class="BMI-heading">BMI Calculator Chart</h1>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="BMI">BMI</th>
+                                <th class="BMI">Weight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="Below">Below 18.5</td>
+                                <td class="Below">Underweight</td>
+                            </tr>
+                            <tr>
+                                <td class="Below">Below 18.5</td>
+                                <td class="Below">Underweight</td>
+                            </tr>
+                            <tr>
+                                <td class="Below">Below 18.5</td>
+                                <td class="Below">Underweight</td>
+                            </tr>
+                            <tr>
+                                <td class="Below">Below 18.5</td>
+                                <td class="Below">Underweight</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="Calculate-BMI">
+                    <h1 class="BMI-heading2">Calculate your BMI</h1>
+                    <p class="third-des2">We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym. </p>
+                    <div>
+                        <input class="input" type="text" placeholder="Height/cm">
+                        <input class="input" type="text" placeholder="Weight/kg">
+                    </div>
+                    <div>
+                        <input class="input" type="text" placeholder="Age">
+                        <input class="input" type="text" placeholder="Sex">
+                    </div>
+                    <div>
+                        <input class="input2" type="text" placeholder="Select an activity factor">
+                    </div>
+                </div>
+                </div>
+             </section>
+             <!--Meet Our Team -->
+             <section>
+                <div>
+                    <div class="section-four">
+                    <h1 class="change">Meet Our Team</h1>
+                    <p class="believe">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div>
+                    <div>
+                        <h3></h3>
+                        <h3></h3>
+                        <h3></h3>
+                        <h3></h3>
+                        <h3></h3>
+                        <h3></h3>
+                    </div>
+                </div>
+             </section>
+        
     </main> 
     <footer>
 
