added new updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>B10A2 Versatile Ui</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="body">
     <header>
         <nav class="navbar">
             <div>
@@ -84,6 +84,7 @@
                     <img class="second-img" src="images/run.jpg" alt="">
                 </div>
             </div>
+            <!-- Trainings and Exercises -->
             <div class="third-section-first-div">
             <div class="third-section-heading-title">
                 <h1 class="third-heading">Trainings and Exercises</h1>
@@ -91,20 +92,36 @@
             </div>
                 <div class="img-section">
             <div class="img-row">
-                <img class="third-sec-first-background" src="images/exercise1.jpg" alt="">
+                <div class="gradiant-one"></div>
+                    <img class="third-sec-first-background" src="images/exercise1.jpg" alt="">
                 </img>
-                <img class="third-sec-second-background" src="images/exercise2.png" alt="">
-                </img>
-                <img class="third-sec-third-background" src="images/exercise3.png" alt="">
+                <div>
+                <div class="gradiant-two"></div>
+                    <img class="third-sec-second-background" src="images/exercise2.png" alt="">
                 </img>
             </div>
+                <div>
+                <div class="gradiant-three"></div>
+                    <img class="third-sec-third-background" src="images/exercise3.png" alt="">
+                </img>
+            </div>
+            </div>
             <div class="img-row">
-                <img class="third-sec-fourth-background" src="images/exercise4.png" alt="">
+                <div>
+                <div class="gradiant-four"></div>
+                    <img class="third-sec-fourth-background" src="images/exercise4.png" alt="">
                 </img>
-                <img class="third-sec-fifth-background" src="images/exercise5.jpg" alt="">
+            </div>
+            <div>
+                <div class="gradiant-five"></div>
+                    <img class="third-sec-fifth-background" src="images/exercise5.jpg" alt="">
                 </img>
-                <img class="third-sec-sixth-background" src="images/exercise6.jpg" alt="">
+            </div>
+            <div>
+                <div class="gradiant-six"></div>
+                    <img class="third-sec-sixth-background" src="images/exercise6.jpg" alt="">
                 </img>
+            </div>
             </div>
         </div> 
             </div>
@@ -152,11 +169,13 @@
                         <input class="input" type="text" placeholder="Weight/kg">
                     </div>
                     <div>
-                        <input class="input" type="text" placeholder="Age">
+                        <input class="input" type="text"
+                         placeholder="Age">
                         <input class="input" type="text" placeholder="Sex">
                     </div>
                     <div>
                         <input class="input2" type="text" placeholder="Select an activity factor">
+                        <button class="Calculate-now">Calculate</button>
                     </div>
                 </div>
                 </div>
@@ -168,20 +187,68 @@
                     <h1 class="change">Meet Our Team</h1>
                     <p class="believe">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
                 </div>
-                    <div>
-                        <h3></h3>
-                        <h3></h3>
-                        <h3></h3>
-                        <h3></h3>
-                        <h3></h3>
-                        <h3></h3>
+                <!-- Gym Trainer img box -->
+                    <div class="Gym-Trainer-img-box">
+                        <div class="frist-trainer-img">
+                            <h3 class="trainer-name">Jerome Bell</h3>
+                            <p class="professon">Trainer</p>
+                        </div>
+                        <div class="second-trainer-img">
+                            <h3 class="trainer-name">Cameron Williamson</h3>
+                            <p class="professon">Trainer</p>
+                        </div>
+                        <div class="third-trainer-img">
+                            <h3 class="trainer-name">Darrell Steward</h3>
+                            <p class="professon">Trainer</p>
+                        </div>
+                        <div class="fourth-trainer-img">
+                            <h3 class="trainer-name">Dianne Russell</h3>
+                            <p class="professon">Trainer</p>
+                        </div>
+                        <div class="fifth-trainer-img">
+                            <h3 class="trainer-name">Cody Fisher</h3>
+                            <p class="professon">Trainer</p>
+                        </div>
+                        <div class="sixth-trainer-img">
+                            <h3 class="trainer-name">Theresa Webb</h3>
+                            <p class="professon">Trainer</p>
+                        </div>
                     </div>
                 </div>
              </section>
-        
     </main> 
     <footer>
-
+        <section class="footer">
+            <div class="footer-first-div">
+                <div class="footer-second-div">
+                    <h1 class="footer-headig">Fitness</h1>
+                    <p class="footer-des">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                </div>
+                    <div class="footer-get-started">
+                        <div class="flex-div1">
+                            <h3 class="get-started">Get Started</h3>
+                            <a href="">Service</a>
+                            <a href="">Contact Us</a>
+                            <a href="">Affiliate Program</a>
+                            <a href="">About Us</a>
+                        </div>
+                        <div class="flex-div2">
+                            <h3 class="get-started">Get Started</h3>
+                            <a href="">Fitness</a>
+                            <a href="">Platform</a>
+                            <a href="">Workout  Libary</a>
+                            <a href="">App Design</a>
+                        </div>
+                        </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <hr>
+            <br>
+            <br>
+            <p class="All-right"> &copy;All right reserved @Fitness 2024</p>
+        </section>
     </footer>
 </body>
 </html>
